--- a/src/main/webapp/resources/templates/desktop/home.html
+++ b/src/main/webapp/resources/templates/desktop/home.html
@@ -5,10 +5,10 @@
         <div class="jumbotron">
 
         <img src="resources/img/splash-ticketmonster.png" width="40%" style="float: left"/>
-        <p><h1 class="special-title">Evong's TicketMonster.</h1></p>
+        <p><h1 class="special-title">TicketMonster.</h1></p>
         <p><h1 class="special-title">A JBoss Example.</h1></p>
         <p>
-            TicketMonster is an online ticketing demo application written by Evong that gets you started with
+            TicketMonster is an online ticketing demo application that gets you started with
             JBoss technologies, and helps you learn and evaluate them.
         </p>
 
